--- a/Calculators/templates/common.html
+++ b/Calculators/templates/common.html
@@ -15,6 +15,7 @@
     {#- <link rel='stylesheet' href='{{ url_for('static', filename='css/classify.css', _external=True) }}' media='all'> #}
 
     <script type='text/javascript' src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.0/jquery.min.js'></script>
+    <script type='text/javascript' src='http://ajax.aspnetcdn.com/ajax/jquery.validate/1.14.0/jquery.validate.min.js'></script>
   </head>
 
   <body class='container'>
