--- a/Calculators/templates/common.html
+++ b/Calculators/templates/common.html
@@ -17,6 +17,7 @@
 
     <script type='text/javascript' src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.0/jquery.min.js'></script>
     <script type='text/javascript' src='https://cdnjs.cloudflare.com/ajax/libs/corejs-typeahead/0.11.1/typeahead.bundle.min.js'></script>
+    <script type='text/javascript' src='http://ajax.aspnetcdn.com/ajax/jquery.validate/1.14.0/jquery.validate.min.js'></script>
   {% endblock %}
   </head>
 
