Move away from Boostrap

--- a/Calculators/static/css/calculators.css
+++ b/Calculators/static/css/calculators.css
@@ -12,44 +12,21 @@ html, body {
   margin-bottom: 50px;
 }
 
-span.twitter-typeahead {
-  width: 100%;
-}
-
-.tt-input,
-.tt-hint {
-  height: 30px;
-  font-size: 24px;
-  line-height: 30px;
-  border: 2px solid #ccc;
-}
-
-.tt-menu {
-  background-color: #FFF;
-  margin-top: 12px;
-  padding: 8px 0;
-  border: 1px solid #ccc;
-  border-radius: 8px;
-}
-
-.tt-suggestion {
-  padding: 3px 20px;
-  font-size: 18px;
-  line-height: 24px;
-}
-
-.tt-suggestion.tt-cursor {
-  color: #fff;
-  background-color: #0097cf;
-
-}
-
 #calculator-list:hover,
 nav#calculator-list.expanded {
   width: auto;
   overflow-x: visible;
   overflow-y: scroll;
 }
+
+#calculator-list li .id {
+  display: none;
+}
+
+#calculator-list button {
+  display: none;
+}
+
 #calculator-list:hover button {
   display: inline-block !important;
 }
@@ -64,7 +41,7 @@ nav#calculator-list.expanded {
 }
 
 #calculator-list input.search {
-  width: 100%;
+  display: block;
   padding: 0 10px;
   margin: 0 0 5px;
   height: 36px;
@@ -73,6 +50,7 @@ nav#calculator-list.expanded {
 #new-formula-name {
   padding: 0 10px;
   height: 36px;
+  width: auto;
   min-width: 60px;
   display: inline-block;
 }
@@ -83,26 +61,32 @@ nav#calculator-list.expanded {
   display: inline-block;
 }
 
+.delete-calculator {
+  height: 33px;
+  margin-top: 1px !important;
+}
+
 #calculator-list ul {
   padding: 0;
 }
 
 #calculator-list li {
-  display: block;
+  display: inline-block;
+  height: 36px;
   -webkit-transform: translateZ(0) scale(1,1);
   -webkit-transition: all .2s linear;
   transition: all .2s linear;
-  height: 36px;
   padding-left: 10px;
   padding-right: 10px;
+  display: block;
 }
 
-#calculator-list li a {
-  color: #999;
-  text-decoration: none;
+#calculator-list div.li {
+  cursor: pointer;
   display: inline-block;
+  height: 36px;
+  color: #999;
   width: auto;
-  vertical-align: middle;
 }
 
 #calculator-list .name {
@@ -114,66 +98,18 @@ nav#calculator-list.expanded {
   white-space: nowrap;
 }
 
-#calculator-list li:hover a,
-nav#calculator-list li.active a {
+#calculator-list li:hover div,
+nav#calculator-list li.active div {
   color: #fff;
 }
 
 #calculator-list li:hover,
 nav#calculator-list li.active {
   background-color: #5fa2db;
-  width: 100%;
 }
 
 #editor-wrapper {
   flex: 1;
-}
-
-#editor-tag-bar {
-  height: 10%;
-  position: fixed;
-  top: 0;
-  width: 94%;
-  padding: 10px 10px 0;
-  z-index: 999;
-}
-
-#editor-tag-bar .tokenfield {
-  padding: 0;
-  min-height: 0;
-  border-color: white;
-  -webkit-box-shadow: none;
-  box-shadow: none;
-}
-
-#editor-tag-bar .tokenfield .token {
-  margin-bottom: 0;
-}
-
-#editor-tag-bar .twitter-typeahead {
-  top: -5px;
-}
-
-#editor-tag-bar .twitter-typeahead .tt-hint,
-#editor-tag-bar .twitter-typeahead .tt-input {
-  height: 25px;
-  padding: 4px 0 0;
-}
-
-#editor-tag-bar .tt-menu {
-  margin-top: 0;
-  padding: 0;
-  margin-top: 3px;
-}
-
-#editor-tag-bar .tt-menu .tt-suggestion {
-  padding: 0 10px;
-  font-size: 14px;
-}
-
-#editor-tag-bar .tt-menu .tt-cursor {
-  color: white;
-  background-image: none;
 }
 
 #editor {
