--- a/Calculators/templates/edit_calculators.html
+++ b/Calculators/templates/edit_calculators.html
@@ -4,60 +4,75 @@
     {{ super() }}
     <script type='text/javascript' src='https://cdnjs.cloudflare.com/ajax/libs/ace/1.2.3/ace.js'></script>
     <script type='text/javascript' src='https://cdnjs.cloudflare.com/ajax/libs/list.js/1.1.1/list.min.js'></script>
-    <script type='text/javascript' src='https://cdnjs.cloudflare.com/ajax/libs/bootstrap-tokenfield/0.12.0/bootstrap-tokenfield.min.js'></script>
-    <link rel='stylesheet' type='text/css' href='https://cdnjs.cloudflare.com/ajax/libs/bootstrap-tokenfield/0.12.0/css/bootstrap-tokenfield.min.css' media='all'>
-    <link rel='stylesheet' type='text/css' href='https://cdnjs.cloudflare.com/ajax/libs/bootstrap-tokenfield/0.12.0/css/tokenfield-typeahead.min.css' media='all'>
+    <script type='text/javascript' src='{{ url_for('static', filename='javascripts/jquery.caret.min.js') }}'></script>
+    <script type='text/javascript' src='{{ url_for('static', filename='javascripts/jquery.tag-editor.min.js') }}'></script>
+    <link rel='stylesheet' type='text/css' href='{{ url_for('static', filename='css/jquery.tag-editor.css') }}' media='all'>
 {% endblock %}
 
 {% block body %}
     <div id='edit-calculators'>
       <div id='saved' class='alert-wrapper'>
-        <div class='alert alert-success'>Saved.</div>
+        <div class='ui positive message'>Saved.</div>
       </div>
 
       <div id='modified' class='alert-wrapper'>
-        <div class='alert alert-danger'>
+        <div class='ui negative message'>
           The template has been modified<br />
-          <button type='button' class='discard btn btn-warning'>Discard</button>
-          <button type='button' class='save btn btn-success'>Save</button>
+          <div class='ui buttons'>
+            <button class='ui discard button'>Discard</button>
+            <div class='or'></div>
+            <button class='ui positive save button'>Save</button>
+          </div>
         </div>
       </div>
 
       <div id='confirm-delete' class='alert-wrapper'>
-        <div class='alert alert-danger'>
+        <div class='ui negative message'>
           Are you sure you want to delete?<br />
-          <button type='button' class='no-delete btn btn-default'>Cancel</button>
-          <button type='button' class='delete btn btn-danger'>Delete</button>
+          <div class='ui buttons'>
+            <button class='ui no-delete button'>Cancel</button>
+            <div class='or'></div>
+            <button class='ui delete negative button'>Delete</button>
+          </div>
         </div>
       </div>
 
-      <nav id='calculator-list'>
+      <nav id='calculator-list' class='ui form'>
         <input class='search' placeholder='Search' />
-        <form class='form-inline' onsubmit='return false;'>
-          <div class='form-group'>
-            <input autocomplete='off' class='form-control' id='new-formula-name' placeholder='New name'>
-          </div>
-          <button id='new-formula' class='btn btn-primary'>Create</button>
+        <div class='ui form' onsubmit='return false;'>
+          <input autocomplete='off' id='new-formula-name' placeholder='New name'>
+          <button id='new-formula' class='ui primary button'>Create</button>
         </form>
-        <ul class='list'></ul>
+        <ul class='list'>
+          <li>
+            <span class='id'>id</span>
+            <div class='li'>
+              <span class='name'>name</span>
+            </div>
+            <button class='ui right floated negative delete-calculator button'>Delete</button>
+          </li>
+        </ul>
       </nav>
 
       <div id='editor-wrapper'>
         <div id='editor-tag-bar'>
-          <input id='tokenfield' type='text' class='form-control' placeholder='Tag'>
+          <textarea id='tokenfield'></textarea>
         </div>
 
         <div id='editor'></div>
 
         <div id='editor-button-bar'>
-          <button type='button' class='discard btn btn-warning'>Discard</button>
-          <button type='button' class='save btn btn-success'>Save</button>
+          <div class='ui buttons'>
+            <button class='ui discard button'>Discard</button>
+            <div class='or'></div>
+            <button class='ui positive save button'>Save</button>
+          </div>
         </div>
       </div>
     </div>
 
     <script type='text/javascript'>
-      var tag_engine = null;
+      var calculator_list = null;
       var editor = null;
       var formula = null;
       var loaded = null;
@@ -69,46 +84,30 @@
         $('#editor').css('top',
             parseInt($('#editor-tag-bar').css('padding-top').replace('px', '')) +
             Math.max($('#editor-tag-bar').innerHeight(),
-              $('#editor-tag-bar .tokenfield').outerHeight())
+              $('#editor-tag-bar #tokenfield').outerHeight())
             );
         editor.resize();
 
-        var tags = [];
-        $('.token-label').each(function () { tags.push($(this).text()) });
+        var tags = $('#tokenfield').tagEditor('getTags')[0].tags;
 
         $.post('{{ url_for('Endpoint:set_tags') }}',
-            {id: loaded.data('id'),
+            {id: calculator_list.get('name', loaded[0].outerText)[0]._values['id'],
              tags: JSON.stringify(tags)}
           );
       }
 
       function create_list(calculators) {
-        calculators.forEach(function (calculator) {
-          $('<li>')
-            .html(
-              $('<a>', {
-                href: '#' + calculator.id
-              })
-              .data('id', calculator.id)
-              .html(
-                $('<span>')
-                  .addClass('name')
-                  .text(calculator.name)
-              )
-            )
-            .append(
-                $('<button>')
-                  .addClass('btn btn-danger pull-right delete-calculator')
-                  .data('id', calculator.id)
-                  .text('Delete')
-                  .hide()
-            )
-            .appendTo($('#calculator-list ul'));
+        calculator_list = new List('calculator-list', {
+          valueNames: [ 'name', 'id' ]
         });
 
-        new List('calculator-list', {
-          valueNames: [ 'name' ]
-        });
+        var active = $('li.active');
+
+        calculator_list.remove('id', 'id');
+        calculator_list.add(calculators);
+
+        $('li').removeClass('active');
+        $(active).addClass('active');
 
         set_click_action();
       }
@@ -117,28 +116,28 @@
         $.ajax({
           url: '{{ url_for('Endpoint:delete_calculator') }}',
           type: 'DELETE',
-          data: {'id': deleting.data('id')},
+          data: {id: calculator_list.get('name', $('.name', deleting.parents('li')).text())[0]._values['id']},
           success: function (data) {
-            deleting.parents('li').remove();
+            calculator_list.remove('name', $('.name', deleting.parents('li')).text())
           }
         });
       }
 
       function set_click_action() {
-        $('#calculator-list a').click(function () {
+        $('#calculator-list div.li').click(function () {
           var calc = $(this);
-
-          if (active_link) {
-            active_link.removeClass('active');
-          }
-          active_link = calc.parents('li').addClass('active');
 
           if (loaded && formula != editor.getValue()) {
             load_requested = calc;
             $('#modified').show();
           } else {
+            if (active_link) {
+              active_link.removeClass('active');
+            }
+            active_link = calc.parents('li').addClass('active');
+
             $.get('{{ url_for('Endpoint:get_formula') }}',
-              {id: calc.data('id')},
+              {id: calculator_list.get('name', calc[0].outerText)[0]._values['id']},
               function (data) {
                 data = JSON.parse(data);
 
@@ -148,11 +147,24 @@
                 editor.resize();
                 $('#editor-wrapper').show();
 
-                $('#tokenfield').tokenfield({
-                  typeahead: [null, { source: tag_engine.ttAdapter() }]
-                });
+                var tags = $('#tokenfield').tagEditor('getTags')[0].tags;
+                if (tags) {
+                  for (i = 0; i < tags.length; i++) {
+                    $('#tokenfield').tagEditor('removeTag', tags[i]);
+                  }
+                }
+                $('#tokenfield').tagEditor('destroy');
 
-                $('#tokenfield').tokenfield('setTokens', data.tags);
+                $('#tokenfield').tagEditor({
+                  placeholder: 'Tags',
+                  initialTags: data.tags,
+                  autocomplete: {
+                    source: function (req, resp) {
+                      var search = '{{ url_for('Endpoint:search_tags', search='') }}';
+                      $.getJSON(search + encodeURIComponent(req.term), resp);
+                    }
+                  }
+                });
               }
             );
           }
@@ -165,15 +177,6 @@
       }
 
       $(function () {
-        tag_engine = new Bloodhound({
-          datumTokenizer: Bloodhound.tokenizers.whitespace,
-          queryTokenizer: Bloodhound.tokenizers.whitespace,
-          remote: {
-            url: '{{ url_for('Endpoint:search_tags', search='') }}' + '%QUERY',
-            wildcard: '%QUERY'
-          }
-        });
-
         $('#new-formula').click(function () {
           var name = $('#new-formula-name').val();
           if (!name) {
@@ -187,7 +190,12 @@
             data: {'name': name},
             success: function (data) {
               data = JSON.parse(data);
-              create_list(data.results);
+              var searchable = [];
+              for (i = 0; i < data.size; i++) {
+                searchable.push({id: data.results[i].id,
+                  name: data.results[i].name});
+              }
+              create_list(searchable);
             }
           });
         });
@@ -195,7 +203,7 @@
         $('.delete').click(function () {
           $('#confirm-delete').hide();
           do_delete();
-          if (deleting.parents('li')[0] == loaded.parents('li')[0]) {
+          if (loaded && (deleting.parents('li')[0] == loaded.parents('li')[0])) {
             $('#editor-wrapper').hide();
           }
         });
@@ -208,24 +216,25 @@
           update_tags();
 
           $.post('{{ url_for('Endpoint:set_formula') }}',
-              {id: loaded.data('id'), formula: editor.getValue()},
-              function () {
-                $('#saved').show();
-                setTimeout(function () {
-                  $('#saved').fadeOut();
-                }, 2000);
+            {id: calculator_list.get('name', loaded[0].outerText)[0]._values['id'],
+              formula: editor.getValue()},
+            function () {
+              $('#saved').show();
+              setTimeout(function () {
+                $('#saved').fadeOut();
+              }, 2000);
 
-                $('#modified').hide();
+              $('#modified').hide();
 
-                if (load_requested) {
-                  var clicked = load_requested;
-                  load_requested = null;
-                  loaded = null;
-                  clicked.click();
-                } else {
-                  formula = editor.getValue();
-                }
+              if (load_requested) {
+                var clicked = load_requested;
+                load_requested = null;
+                loaded = null;
+                clicked.click();
+              } else {
+                formula = editor.getValue();
               }
+            }
           );
         });
 
@@ -255,12 +264,12 @@
           function (data) {
             data = JSON.parse(data);
 
-            create_list(data.results);
-
-            if (window.location.hash.slice(1)) {
-              var link = $('a[href="' + window.location.hash + '"]');
-              link.click();
+            var searchable = [];
+            for (i = 0; i < data.size; i++) {
+              searchable.push({id: data.results[i].id,
+                name: data.results[i].name});
             }
+            create_list(searchable);
           }
         );
       });
