--- a/Calculators/templates/calculator.html
+++ b/Calculators/templates/calculator.html
@@ -6,141 +6,150 @@
 {% endblock %}
 
 {% block body -%}
-  <body class='ui container'>
-    <div class='row'>
-      <div class='sixteen wide column'>
-        <div id='search-box' class='ui large form'>
-          <div class='field'>
-            <input id='jquery-autocomplete' type='text' placeholder='Find a calculator'>
+  <body>
+    <div class='ui center aligned grid'>
+      <a href='{{ url_for('Edit:index') }}'>
+        <div class='ui blue message row'>
+          Edit calculators
+        </div>
+      </a>
+    </div>
+    <div class='ui container'>
+      <div class='row'>
+        <div class='sixteen wide column'>
+          <div id='search-box' class='ui large form'>
+            <div class='field'>
+              <input id='jquery-autocomplete' type='text' placeholder='Find a calculator'>
+            </div>
+            <span id='permalink'></span>
           </div>
-          <span id='permalink'></span>
         </div>
       </div>
-    </div>
-    <div class='ui one column stackable grid'>
-      <div class='eight wide column'>
-        <div id='calculator-form-wrapper'>
-        {% if variables %}
-          <form class='ui large form' id='calculator-form'>
-            <input type='hidden' name='calculator' value='{{ calculator_name }}'>
-          {%- for variable in variables -%}
-            {%- set label = labels[variable][0] -%}
-            {%- set type = labels[variable][1] %}
+      <div class='ui one column stackable grid'>
+        <div class='eight wide column'>
+          <div id='calculator-form-wrapper'>
+          {% if variables %}
+            <form class='ui large form' id='calculator-form'>
+              <input type='hidden' name='calculator' value='{{ calculator_name }}'>
+            {%- for variable in variables -%}
+              {%- set label = labels[variable][0] -%}
+              {%- set type = labels[variable][1] %}
 
-            <div class='required field'>
-              <label for='{{ variable }}'>{{ label }}</label>
+              <div class='required field'>
+                <label for='{{ variable }}'>{{ label }}</label>
 
-            {%- if type != 'number' %}
-              <div class='ui {{ 'right' if type in g.group_after else '' }} {{ 'labeled' if type in g.group_after or type in g.group_before else '' }} input'>
-            {%- endif %}
+              {%- if type != 'number' %}
+                <div class='ui {{ 'right' if type in g.group_after else '' }} {{ 'labeled' if type in g.group_after or type in g.group_before else '' }} input'>
+              {%- endif %}
 
-            {%- set group_before -%}
-              {%- if type in g.group_before -%}
-                <div class='ui label'>{{ g.group_before[type] }}</div>
-              {%- endif -%}
-            {%- endset -%}
+              {%- set group_before -%}
+                {%- if type in g.group_before -%}
+                  <div class='ui label'>{{ g.group_before[type] }}</div>
+                {%- endif -%}
+              {%- endset -%}
 
-            {%- set group_after %}
-              {%- if type in g.group_after %}
-                <div class='ui label'>{{ g.group_after[type] }}</div>
-              {%- endif -%}
-            {%- endset %}
+              {%- set group_after %}
+                {%- if type in g.group_after %}
+                  <div class='ui label'>{{ g.group_after[type] }}</div>
+                {%- endif -%}
+              {%- endset %}
 
-                {{ group_before|safe }}
-                <input required type='number' step='0.01' name='{{ variable }}' id='{{ variable }}'>
-                {{ group_after|safe -}}
+                  {{ group_before|safe }}
+                  <input required type='number' step='0.01' name='{{ variable }}' id='{{ variable }}'>
+                  {{ group_after|safe -}}
 
-            {%- if type != 'number' %}
+              {%- if type != 'number' %}
+                </div>
+              {%- endif %}
               </div>
-            {%- endif %}
-            </div>
-          {%- endfor %}
-            <button type='submit' class='ui right floated primary submit button'>Calculate</button>
-            = <span id='answer'></span><span id='form-error' style='color: red;'></span>
-          </form>
-        {% endif %}
-        </div>
-        <script type='text/javascript'>
-          function process_form_fail(data) {
-            data = JSON.parse(data.responseText);
-            if ('missing' in data) {
-              data.missing.forEach(function(m) {
-                $('#'+m+'-error').show().text('This field is required.');
-              });
-            } else if ('message' in data) {
-              $('#answer').text('');
-              $('#form-error').text(data.message).show();
+            {%- endfor %}
+              <button type='submit' class='ui right floated primary submit button'>Calculate</button>
+              = <span id='answer'></span><span id='form-error' style='color: red;'></span>
+            </form>
+          {% endif %}
+          </div>
+          <script type='text/javascript'>
+            function process_form_fail(data) {
+              data = JSON.parse(data.responseText);
+              if ('missing' in data) {
+                data.missing.forEach(function(m) {
+                  $('#'+m+'-error').show().text('This field is required.');
+                });
+              } else if ('message' in data) {
+                $('#answer').text('');
+                $('#form-error').text(data.message).show();
+              }
             }
-          }
 
-          function capture_form_submission() {
-            $('#calculator-form').submit(function (event ) {
-              event.preventDefault();
+            function capture_form_submission() {
+              $('#calculator-form').submit(function (event ) {
+                event.preventDefault();
 
-              var form_data = {};
-              $('#calculator-form :input').serializeArray().forEach(function(o) {
-                form_data[o.name] = o.value;
+                var form_data = {};
+                $('#calculator-form :input').serializeArray().forEach(function(o) {
+                  form_data[o.name] = o.value;
+                });
+
+                $.post('{{ url_for('Endpoint:calculate') }}', form_data, function(data) {
+                  $('#form-error').hide();
+                  $('#answer').text(data);
+                }).fail(function(data) {
+                  process_form_fail(data);
+                });
+
+                return false;
+              });
+            }
+
+            function set_form(page, id) {
+              var link = '{{ url_for('Index:calculator_permalink_1', _external=True) }}/' + id;
+              var permalink = $('<a>', {
+                text: 'Permalink: ' + link,
+                href: link
               });
 
-              $.post('{{ url_for('Endpoint:calculate') }}', form_data, function(data) {
-                $('#form-error').hide();
-                $('#answer').text(data);
-              }).fail(function(data) {
-                process_form_fail(data);
-              });
+              $('#permalink').html(permalink).show();
 
-              return false;
+              /* We're given an HTML page in a string. Parse it and grab #calculator-form
+                from the page, then place the form into #calculator-form-wrapper on this
+                page. */
+              $('#calculator-form-wrapper').html($('#calculator-form', page));
+
+              /* Set up the form validator */
+              var validator = $('#calculator-form').validate();
+
+              capture_form_submission();
+            }
+
+            $(function() {
+              $('#jquery-autocomplete').autocomplete({
+                source: function (req, resp) {
+                  var search = '{{ url_for('Endpoint:search_by_tags', search_string='') }}';
+                  $.getJSON(search + encodeURIComponent(req.term), resp);
+                },
+                select: function(event, ui) {
+                  $.post('{{ url_for('Endpoint:get_html_form_by_id') }}',
+                    {'id': ui.item.id},
+                    function (page) { set_form(page, ui.item.id); }
+                  );
+                }
+              })
+              .autocomplete('instance')._renderItem = function ( ul, item ) {
+                var res = item.name;
+                if (item.tags.length) {
+                  res += ' (' + item.tags.join(', ') + ')';
+                }
+                this.term.split(' ').forEach(function (term) {
+                  if (!term) { return; }
+                  res = res.replace(new RegExp('(' + term + ')', 'gi'), '<b>$1</b>');
+                });
+                return $('<li>').append('<a>' + res + '</a>').appendTo( ul );
+              };
+
+              capture_form_submission();
             });
-          }
-
-          function set_form(page, id) {
-            var link = '{{ url_for('Index:calculator_permalink_1', _external=True) }}/' + id;
-            var permalink = $('<a>', {
-              text: 'Permalink: ' + link,
-              href: link
-            });
-
-            $('#permalink').html(permalink).show();
-
-            /* We're given an HTML page in a string. Parse it and grab #calculator-form
-               from the page, then place the form into #calculator-form-wrapper on this
-               page. */
-            $('#calculator-form-wrapper').html($('#calculator-form', page));
-
-            /* Set up the form validator */
-            var validator = $('#calculator-form').validate();
-
-            capture_form_submission();
-          }
-
-          $(function() {
-            $('#jquery-autocomplete').autocomplete({
-              source: function (req, resp) {
-                var search = '{{ url_for('Endpoint:search_by_tags', search_string='') }}';
-                $.getJSON(search + encodeURIComponent(req.term), resp);
-              },
-              select: function(event, ui) {
-                $.post('{{ url_for('Endpoint:get_html_form_by_id') }}',
-                  {'id': ui.item.id},
-                  function (page) { set_form(page, ui.item.id); }
-                );
-              }
-            })
-            .autocomplete('instance')._renderItem = function ( ul, item ) {
-              var res = item.name;
-              if (item.tags.length) {
-                res += ' (' + item.tags.join(', ') + ')';
-              }
-              this.term.split(' ').forEach(function (term) {
-                if (!term) { return; }
-                res = res.replace(new RegExp('(' + term + ')', 'gi'), '<b>$1</b>');
-              });
-              return $('<li>').append('<a>' + res + '</a>').appendTo( ul );
-            };
-
-            capture_form_submission();
-          });
-        </script>
+          </script>
+        </div>
       </div>
     </div>
   </body>
